# memoist

./: .env.example  .gitignore  BACKEND.md  README.md  compose.yml
.trae/documents/: Add WhisperLiveKit to Docker Compose.md  Implement Postgres + JWT Auth for backend_app_api_v1_auth.py.md
backend/: Dockerfile  pyproject.toml
backend/app/api/: main.py  routers.py
backend/app/api/v1/: auth.py
backend/app/core/: db.py  exceptions.py  security.py  settings.py
backend/app/models/: auth.py
backend/db/: init.sql
